--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Index of github repositories
+<!--
+This is the source for https://GuenterQuast.github.io/index.html,
+generated via   pandoc README.md -o index.html
+-->
+<body style="background-color:white;">
+<p style="background-color:AliceBlue;">
+</p>
+
+<h1 ALIGN="center"; style="background-color:GhostWhite"> 
+  &nbsp; List of github repositories 
+</h1>
+by Günter Quast 
+
+
+<ul>
+  
+  <li>
+    <a href="https://github.com/GuenterQuast/picoCosmo"> picoCosmo</a>:&nbsp;
+      Record and analyze data from muon detectors with a picoScope USB oscilloscope <br>
+  </li>
+
+  <br><li>
+  <a href="https://github.com/GuenterQuast/picoDAQ"> picoDAQ</a>:&nbsp
+  data aquisition with PicoScope USB oscilloscope <br>  
+  <br><li>
+    <a href="https://github.com/GuenterQuast/PhyPraKit"> PhyPraKit</a>:&nbsp;
+    Python-Module für das Physikalische Praktikum am KIT <br>
+  </li>
+  <br><li>
+    <a href="https://github.com/GuenterQuast/mimoCoRB"> mimoCoRB</a>:&nbsp;
+    multiple-in multiple-out configurable Ring Buffer <br>
+  </li>
+  <br><li>
+    <a href="https://github.com/GuenterQuast/redpitaya-daq"> redpitaya-daq</a>:&nbsp;
+    Data acquisition with RedPitaya for gamma spectroscopy <br>
+  </li>
+  <br><li>
+    <a href="https://github.com/GuenterQuast/ppBilliard"> ppBilliard</a>:&nbsp;
+    p(roton) p(roton) Billard: video analysis of colliding balls and
+    interpretation as a result of a proton-proton collision 
+    <br>
+  </li>
+  <br><li>
+    <a href="https://github.com/PhyPiDAQ/PhyPiDAQ"> PhyPiDAQ</a>:&nbsp;
+    Software package for data acquisition with Raspberry Pi<br>
+  </li>  
+  <br><li>
+    <a href="https://github.com/PhiLFitters/kafe2"> kafe2 </a>:&nbsp;
+    Karlsruhe Fit Environment 2: likelihood-based parameter estimation <br>
+  </li>
+
+<ul>  
